# aiotimebot

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  test-pypi.yml
docs/: README.md  api-operations.md  api-reference.md  client-and-rest.md  configuration.md  errors-and-retries.md  getting-started.md  lifecycle.md  recipes.md  releasing.md  routing-and-events.md  state-storage.md  time-7.8-compatibility.md
schema/: time-api-v4.yaml
scripts/: generate_api.py
src/aiotimebot/: __init__.py  application.py  client.py  context.py  dispatcher.py  errors.py  events.py  filters.py  retry.py  routing.py  storage.py  transport.py  websocket.py
src/aiotimebot/api/: __init__.py  client.py  operation_registry.py
src/aiotimebot/api/api/applications/: create_application.py  delete_application.py  get_application.py  get_team_applications.py  install_application.py  patch_application.py  regen_application_token.py  uninstall_application.py
src/aiotimebot/api/api/bots/: assign_bot.py  convert_bot_to_user.py  convert_user_to_bot.py  create_bot.py  delete_bot_icon_image.py  disable_bot.py  enable_bot.py  get_bot.py  get_bot_icon_image.py  get_bots.py  patch_bot.py  set_bot_icon_image.py
src/aiotimebot/api/api/brand/: delete_brand_image.py  get_brand_image.py  upload_brand_image.py
src/aiotimebot/api/api/channels/: add_channel_member.py  add_channel_members.py  autocomplete_channels_for_team.py  autocomplete_channels_for_team_for_search.py  channel_members_minus_group_members.py  channels_suggestion_for_team.py  close_direct_channel.py  conversations_suggestion_for_team.py  create_channel.py  (+51 more)
src/aiotimebot/api/models/: __init__.py  activity_feed.py  activity_feed_items_item.py  activity_feed_items_item_item.py  activity_feed_items_item_type.py  add_channel_member.py  add_channel_member_body.py  add_group_members_body.py  add_license_as_maintenance_body.py  add_on.py  add_team_member_body.py  address.py  announcement_banner.py  app_error.py  application.py  application_bot.py  application_bot_additional_permissions_item.py  application_bot_role.py  application_command.py  application_command_request.py  application_command_request_method.py  application_components.py  application_i_ds_for_team.py  application_manifest.py  application_owner.py  application_tokens.py  attach_device_id_body.py  audit.py  auth_config.py  auth_config_auth_order_item.py  autocomplete_suggestion.py  autocomplete_users_source.py  boards_limits.py  boosted_user_or_channel.py  bot.py  channel.py  channel_member.py  channel_member_count_by_group.py  channel_member_with_error.py  channel_member_with_team_data.py  (+435 more)
tests/: __init__.py  conftest.py  test_application.py  test_client.py  test_dispatcher.py  test_documentation.py  test_events.py  test_filters_and_router.py  test_openapi_coverage.py  test_reactions.py  test_retry.py  test_storage.py  test_websocket.py
(+387 files in other folders)
